# CAM-Project

./: pyproject.toml
Cam_p/: pyproject.toml
Cam_p/src/: __init__.py  main.py
Cam_p/src/geolocation/: location.py
Cam_p/src/listaFaces/: getFaces.py
Cam_p/src/snapShoting/: pozare.py
Cam_p/src/status/: Offline.py  __init__.py
src/: __init__.py  main.py
src/comunication/: mail.py
src/geolocation/: location.py
src/listaFaces/: getFaces.py
src/recognition/: recognition.py
src/snapShoting/: __init__.py  pozare.py
src/status/: Offline.py  Online.py  __init__.py
