[tool.poetry]
name = "cam-p"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cam_p"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
cmake = "^3.26.3"
pip = "^23.1.2"
install = "^1.3.5"
dlib = {url = "https://github.com/jloh02/dlib/releases/download/v19.22/dlib-19.22.99-cp310-cp310-win_amd64.whl"}
urllib3 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
